--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -23,3 +23,18 @@
     display: block;
     margin: 0 auto;
 }
+
+.button-allproducts{
+    margin-right: 20px;
+    justify-content: space-between;
+    display: flex;
+    flex: 1;
+    padding: 10px;
+    -webkit-box-shadow: -7px -4px 18px -7px #000000; 
+    box-shadow: -7px -4px 18px -7px #000000;
+    border-radius: 10px;
+    height: 40px;
+    position: absolute;
+    right: 0px;
+    background-color: #ecedc8;
+}
